fixing the alignment of repo items

--- a/src/styles/repository.css
+++ b/src/styles/repository.css
@@ -191,7 +191,7 @@
     .repositories-wrapper {
         justify-content: flex-start;
         margin-top: 68px;
-        padding: 30px 0;
+        padding: 0 0 50px 0;
     }
     .repository-header{
         justify-content: flex-start;
